--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/fitnesscenterdb
 spring.datasource.username=root
-spring.datasource.password=J1j2j3j4
+spring.datasource.password=@Badr12
 
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
