--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "firebase": "^7.15.0",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "mapbox-gl": "^3.0.0",
@@ -24,7 +25,6 @@
     "react-map-gl": "^7.1.6",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
@@ -52,5 +52,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+  }
 }
